<resources>
    <string name="app_name">Spy</string>
    <string name="new_game_Btn">Играть</string>
    <string name="choose_player_Btn">Показать</string>
    <string name="hide_player_Btn">Скрыть</string>
    <string name="player">Игрок </string>
    <string name="specific">Правила</string>
    <string name="locations">Локации</string>
    <string name="playersCnt">Кол-во игроков</string>
    <string name="spiesCnt">Кол-во шпионов</string>
    <string name="play_game">Играть</string>
    <string name="main_menu">Главное меню</string>
    <string name="settings_head">Настройки игры</string>
    <string name="game">Игра</string>
    <string name="rand_spies">Рандомное кол-во шпионов</string>
    <string name="players_start_cnt">игроков</string>
    <string name="minutes">мин</string>
    <string name="show_other_spies">Отображать остальных шпионов</string>
    <string name="timer">Таймер, мин</string>
    <string name="timer_start">СТАРТ</string>
    <string name="end_game">Игра окончена</string>
    <string name="other_spies_and">, а также</string>
    <string name="and">и</string>
    <string name="search_menu_title">Search</string>
    <string name="spy_name">Шпион</string>
    <string name="timer_pause">ПАУЗА</string>
    <string name="exit">Выход</string>
    <string name="spyMode">Режим шпионов</string>
    <string name="isSpySeeEachOther">Шпионы видят друг друга</string>
    <string name="isSpyParadox">Шпионы не знают о себе</string>
    <string name="isDiffLoc">Разные локации</string>
    <string name="isCheckLoc">Выбор локаций</string>
    <string name="standard_spy_mode">стандартный</string>
    <string name="rand_spy_mode">рандомный</string>
    <string name="sly_spy_mode">хитрый</string>
    <string name="spiesCntTo">Кол-во шпионов до</string>
    <string name="spiesCntFrom">Кол-во шпионов от</string>
    <string name="isSecure">Защита</string>
    <string name="dialog_check_locations_header">Выберите локации</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Отмена</string>
    <string name="dialog_check_locations_check_all_btn">Выбрать все</string>
    <string name="check_locations_toast">Необходимо выбрать по меньшей мере 2 локации</string>
    <string name="location_btn">Локации</string>
    <string name="start_game_btn">СТАРТ</string>
    <string name="settings">Настройки игры</string>
    <string name="locations_cnt_str">Локаций, шт</string>
</resources>
