<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/spyPlayerLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game"
        android:textSize="@dimen/text_menu_dimen" />

    <TextView
        android:id="@+id/tvCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spy_txt_top_margin"
        android:text=""
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="" />

    <Button
        android:id="@+id/btnNextPlayer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spy_btn_top_margin"
        android:onClick="nextPlayerChoose"
        android:text="@string/choose_player_Btn" />

    <Button
        android:id="@+id/btnBeSpy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:onClick="nextPlayerChoose"
        android:text="Шпион" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="playNewGame"
        android:text="@string/new_game_Btn" />

    <Button
        android:id="@+id/btnCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/timer_start" />

    <LinearLayout
        android:id="@+id/llDefence"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvDefence"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
