<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">


    <ListView
        android:id="@+id/lvGameSettings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnNewGame"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_margin="@dimen/lv_settings_margin"
        />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="@dimen/btn_main_menu_play_game_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnModes"
        android:textSize="@dimen/btn_text_size_main_menu_play_game"
        android:paddingVertical="@dimen/btn_main_menu_play_game_padding_vertical"
        android:layout_marginBottom="@dimen/btn_main_menu_play_game_margin_bottom"
        android:onClick="newGameClick"
        android:text="@string/new_game_Btn" />

    <Button
        android:id="@+id/btnModes"
        android:layout_width="@dimen/btn_main_menu_secondary_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLocations"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/btn_text_size_main_menu_secondary"
        android:paddingVertical="@dimen/btn_main_menu_secondary_padding_vertical"
        android:onClick="settingsClick"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnLocations"
        android:layout_width="@dimen/btn_main_menu_secondary_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSpecific"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/btn_text_size_main_menu_secondary"
        android:paddingVertical="@dimen/btn_main_menu_secondary_padding_vertical"
        android:onClick="locationClick"
        android:text="@string/locations" />

    <Button
        android:id="@+id/btnSpecific"
        android:layout_width="@dimen/btn_main_menu_secondary_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/btn_text_size_main_menu_secondary"
        android:paddingVertical="@dimen/btn_main_menu_secondary_padding_vertical"
        android:layout_marginBottom="@dimen/btn_main_menu_margin_bottom"
        android:onClick="specificClick"
        android:text="@string/specific" />

</RelativeLayout>
